Updated template to use handlebars instead of Jade. Also updated regex and html pattern used within files, so that passed data is not rendered on the page. There is no longer a dependency on a markup pre-processor (jade, dust, etc), only need HTML Updated test to just check to see if correct files are generated.

--- a/test/fixtures/default/default_regex2.html
+++ b/test/fixtures/default/default_regex2.html
@@ -1,8 +1,9 @@
-!##
+<!--[dash:data]
 {
-    "status": "development"
+    "status": "qa",
+    "category": "component"
 }
-##!
+[/dash] -->
 
 <!doctype html>
 <html lang="en">
@@ -11,6 +12,6 @@
     <title>default regex</title>
 </head>
 <body>
-
+    <h1>default regex component</h1>
 </body>
 </html>
