Added new option to pass in a custom html template for HTML partials Removed 64bit encoded image for logo and left it blank, so now 'Logo' text is displayed at the top of the generated dashboard Added 'g' flag for removal of data comments so that all of them get cleaned up for builds Added custom html comments to one of the custom fixtures

--- a/test/fixtures/custom/custom_regex2.html
+++ b/test/fixtures/custom/custom_regex2.html
@@ -6,6 +6,14 @@
     "link": "../test/fixtures/custom/custom_regex2.html"
 }
 [/custom] -->
+<!--[custom:html]
+<div>
+    <h1>Testing</h1>
+    <p>
+        This is just a simple test
+    <p>
+</div>
+[/custom] -->
 
 <!doctype html>
 <html lang="en">
