Added support for EJS and JADE within data comments

--- a/test/fixtures/custom/custom_regex2.html
+++ b/test/fixtures/custom/custom_regex2.html
@@ -6,7 +6,7 @@
     "link": "../test/fixtures/custom/custom_regex2.html"
 }
 [/custom] -->
-<!--[custom:html]
+<!--[custom:ejs]
 <div>
     <h1>Testing</h1>
     <p>
