Added `assets` option that allows authors to pass in external files they want to include in their custom dashboard template. Added jquery and less to default dashboard

--- a/test/fixtures/default/default_regex.html
+++ b/test/fixtures/default/default_regex.html
@@ -1,7 +1,9 @@
 <!--[dash:data]
 {
     "status": "development",
-    "category": "page"
+    "category": "page",
+    "label": "Home",
+    "link": "../test/fixtures/default/default_regex.html"
 }
 [/dash] -->
 
