--- a/test/fixtures/default/default_regex2.html
+++ b/test/fixtures/default/default_regex2.html
@@ -1,7 +1,9 @@
 <!--[dash:data]
 {
     "status": "qa",
-    "category": "page"
+    "category": "page",
+    "label": "Contact",
+    "link": "../test/fixtures/default/default_regex2.html"
 }
 [/dash] -->
 
